2007-11-07  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/*.cpp, include/*.h: Change to UNIX line endings for
	consistency.

2007-11-07  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/builder.cpp, include/openbabel/builder.h: OBBuilder class
	for fragment based structure generation.

	* data/fragments.txt: fragment library for OBBuilder class.

	* tools/obgen.cpp: modified to use OBBuilder

2007-11-07  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/forcefields/forcefielduff.cpp: Fix VDW gradients.

2007-11-05  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/forcefield.cpp (WeightedRotorSearch): Improved conformer
	searching. Still needs geometry optimization for each
	rotamer. (That seems to uncover a bug in OBMol/OBForceField.)

	* tools/obconformer.cpp: Switch to WeightedRotorSearch followed by
	minimization.

	* data/UFF.prm: Improved typing.

	* src/forcefields/*: Add delayed initialization. Only parse the
	parameter file when the force field is called by Setup on a
	particular molecule.

	* src/forcefields/forcefielduff.cpp: Bug fixes.

2007-11-04  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* CMakeLists.txt */CMakeLists.txt: CMake build files contributed
	via Saro Engels and Christian Ehrlicher and the KDE-Win project.

2007-11-04  Chris Morley

	* src/forcefields/forcefieldghemical.cpp(ParseParamFile):
	replaced 4 instances of reserve by resize (on ipar etc).
	Was previously crashing for me.
	
	* include/openbabel/base.h, generic.h: Moved the declaration of
	the OBGenericData base class from generic.h to base.h. This
	potentially reduces dependencies. Most of the derived classes are
	still declared in generic.h. New OBGenericData classes would be
	better with their own header files.
	
	* include/openbabel/atom.h: consequent extra #include.
	
	* src/generic.cpp: OBVibrationData wasn't copying properly. 
	Simplify so uses implicit copy constructor and assignment, which 
	are more reliable.
	