@@ -1,3 +1,8 @@
+2007-11-08  Tim Vandermeersch <tim.vandermeersch@gmail.com>
+
+	* src/builder.cpp: rotation wroks! you can now create fragment based
+	structures such as: CCC(c1ccc(C(c2c(c3ccccc3)cccc2))cc1)
+
 2007-11-07  Geoffrey Hutchison  <babel@geoffhutchison.net>
 
 	* src/*.cpp, include/*.h: Change to UNIX line endings for
